--- a/main.css
+++ b/main.css
@@ -28,3 +28,11 @@ body, html {
 .container {
     margin-top: 50px;
 }
+
+.navbar {
+    background-color: lightslategray;
+}
+
+.nav-link {
+    color: white;
+}
