--- a/main.css
+++ b/main.css
@@ -26,8 +26,20 @@ body, html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+   
+}
 
-    
+
+
+.overlay {
+    position: absolute; /* Position the background text */
+    top: 0; /* At the bottom. Use top:0 to append it to the top */
+    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+    color: #f1f1f1; /* Grey text */
+    height: 50%;
+    width: 100%; /* Full width */
+    padding: 20px; /* Some padding */
+    padding-top: 100px;
 }
 
 
