--- a/main.css
+++ b/main.css
@@ -1,8 +1,7 @@
 
-#logo {
-    height: 50px;
-    
-}
+/* #logo {
+    height: 75px;
+} */
 
 body, html {
     height: 100%;
@@ -15,31 +14,57 @@ body, html {
 
 
 .bg {
-    /* The image used */
     background-image: url("./assets/images/S5_005.jpg");
-
-    /* Full height */
-    height:100%;
-
-    /* Center and scale the image nicely */
+    display: block;
+    height: 50%;
     opacity: 0.75;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-   
 }
 
 
+.lacunalogo {
+position: fixed;
+  width: 80%;
+  height: 100px;
+  z-index: 15;
+  top: 50%;
+  left: 50%;
+  margin: -100px 0 0 -40%;
+  background: rgba(245, 244, 244, 0.6);
+  /* border: 1px solid  rgba(27, 26, 26, 0.9);; */
+  opacity: 30;
+  padding: 20px;
+}
 
-.overlay {
-    position: absolute; /* Position the background text */
-    top: 0; /* At the bottom. Use top:0 to append it to the top */
-    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
-    color: #f1f1f1; /* Grey text */
-    height: 50%;
-    width: 100%; /* Full width */
-    padding: 20px; /* Some padding */
-    padding-top: 100px;
+.lacunadescription {
+position: fixed;
+  width: 80%;
+  min-height: 100px;
+  z-index: 15;
+  top: 50%;
+  left: 50%;
+  margin: 0px 0 0 -40%;
+  background: rgba(245, 244, 244, 0.6);
+  border: 1px solid  rgba(99, 99, 99, 0.4);;
+
+  
+  opacity: 30;
+  padding: 20px;
+
+  text-align: center;
+  vertical-align: middle;
+  
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-width: 350px;
+    min-height: auto;
 }
 
 
